--- a/ms/static/css/step.css
+++ b/ms/static/css/step.css
@@ -181,6 +181,7 @@ a:hover{
 	font-size:30px;
 	font-weight:bold;
 	width:98%;
+	margin-bottom: 100px;
 }
 .feature-info{
 	border: 1px solid #dce3e5;
