--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -63,7 +63,7 @@
 		<li>
 			<img src="/static/img/f4.png" alt="feature" />
 			<p>Trust & Safety</p>
-			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry cleaners are background checked for your safety and peace of mind.">Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry Cleaners are background checked for your safety and peace of mind.">Learn More</font>
 			<div class="bpop" id="bpop-ts">
 				<span class="b-close">x</span>
 				<div class="b-content"></div>
@@ -90,7 +90,7 @@
 		<li>
 			<img src="/static/img/i3.png" alt="info" />
 			<p>3. ENJOY</p>
-			<font>Come home to a sparkling, clean home</font>
+			<font>Enjoy your sparkling, clean home</font>
 		</li>
 	</ul>
 	<div id="wi"><a href="#" class="btn btn-contrast btn-large home-wi">WHAT'S INCLUDED?</a></div>
