--- a/ms/templates/home/info.html
+++ b/ms/templates/home/info.html
@@ -152,7 +152,7 @@
 	<div class="col-md-3">
 		<div class="feature-info">
 			<h2>Commitment to Trust and Safety</h2>
-			<p>All Merry cleaners are background checked for your safety and peace of mind.</p>
+			<p>All Merry Cleaners are background checked for your safety and peace of mind</p>
 		</div>
 		<div class="feature-info">
 			<h2>100% Satisfaction Guarantee</h2>
