--- a/ms/userena/templates/userena/password_reset_form.html
+++ b/ms/userena/templates/userena/password_reset_form.html
@@ -26,6 +26,7 @@
 		<p>Change/cancel your booking</p>
 		<p>Check your history</p>
 		<p>Rate the service</p>
+		<div id="si-qr"><img src="/static/img/qr.jpg" alt="" /></div>
 	</div>
 </div>
 {% endblock %}
