--- a/ms/templates/booking/needs.html
+++ b/ms/templates/booking/needs.html
@@ -113,11 +113,163 @@
 	<div class="col-md-3">
 		<div class="feature-info">
 			<h2>What's Included in the Cleaning</h2>
-			<p>Our professional Merry Cleaners are trained to ensure your home will be sparkling clean!</p>
+			<p>Our professional Merry Cleaners are trained to ensure your home will be sparkling clean! <a class="popdown" id='include'>Learn more</a></p>
+			<div class="bpop" id="bpop-include">
+				<span class="b-close">x</span>
+				<div class="b-content">
+					<h4 class="space-border">What's Included in the Cleaning?</h4>
+					<table>
+						<tr>
+							<td>
+								<p class="big-font">Bedroom</p>
+								<ol>
+									<li>Beds made</li>
+									<li>Clothes folded</li>
+									<li>Furniture & surfaces wiped and dusted</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+							<td>
+								<img src="/static/img/in1.png">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/static/img/in2.png">
+							</td>
+							<td>
+								<p class="big-font">Bathroom</p>
+								<ol>
+									<li>Shower & bathtub rinsed and wiped</li>
+									<li>Countertops wiped</li>
+									<li>Toilets cleaned</li>
+									<li>Sinks, faucets, and fixtures wiped</li>
+									<li>Mirrors cleaned</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<p class="big-font">Kitchen</p>
+								<ol>
+									<li>Dishes washed</li>
+									<li>Cabinet exteriors wiped</li>
+									<li>Countertops and backsplash wiped</li>
+									<li>Sinks, faucets, and fixtures wiped</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+							<td>
+								<img src="/static/img/in3.png">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/static/img/in4.png">
+							</td>
+							<td>
+								<p class="big-font">Other Areas</p>
+								<ol>
+									<li>Furniture & surfaces wiped and dusted</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+						</tr>
+					</table>
+					<center><h4>Special Requirements</h4>(upon request only)</center>
+					<ol>
+						<li>Refrigerator inside cleaned</li>
+						<li>Clothes hand washed</li>
+						<li>Clothes ironed</li>
+					</ol>
+					<h4 class="space-border"></h4>
+					<center><h4>Service NOT Included</h4></center>
+					<em>Due to insurance liability, safety constraints and other considerations we do not offer the following:</em>
+					<ul>
+						<li>Deep stain removal</li>
+						<li>Dusting and/or vacuuming of ceilings/windows/surfaces outside of normal reach</li>
+						<li>Cleaning outside the windows</li>
+						<li>Cleaning pet messes</li>
+						<li>Carpet cleaning</li>
+						<li>Steam cleaning</li>
+						<li>Extermination (insects, etc)</li>
+						<li>Cleaning of mold and biohazardous meterial</li>
+						<li>Landscaping</li>
+						<li>Yardwork</li>
+						<li>Garage</li>
+						<li>Patios</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<div class="feature-info">
 			<h2>Cleaning Supplies Provided</h2>
-			<p>We will bring most supplies necessary to make it hassle-free</p>
+			<p>We will bring most supplies necessary to make it hassle-free <a class="popdown" id='supply'>Learn more</a></p>
+			<div class="bpop" id="bpop-supply">
+				<span class="b-close">x</span>
+				<div class="b-content">
+					<h4 class="space-border">Supplies Included</h4>
+					<div class="supply-content">
+						<h4 class="supply-title">Quality cleaning products for your home</h4>
+						<table>
+							<tr>
+								<td>
+									<img src="/static/img/sup1.png">
+								</td>
+								<td>
+									<p class="big-font">Chemical Cleaners</p>
+									<p>Multi-purpose Cleaner<br />
+									Bathroom Cleaner<br />
+									Kitchen Cleaner</p>
+								</td>
+							</tr>
+							</table>
+							<h4 class="supply-title"></h4>
+							<table>
+							<tr>
+								<td>
+									<p class="big-font">Cleaning tools</p>
+									<p>Pair of gloves<br />
+									4 pieces of microfiber clothes<br />
+									2 pieces of clothes for drying<br />
+									Glass spatula<br />
+									Scouring pad<br />
+									Bathtub brush<br />
+									Steel wire ball</p>
+								</td>
+								<td>
+									<img src="/static/img/sup2.png">
+								</td>
+							</tr>
+						</table>
+					</div>
+					<h4 class="space-border"></h4>
+					<div class="supply-content">
+						<h4 class="supply-title">Cleaning Supplies NOT Included</h4>
+						<p><em>Please make sure your are able to provide all the necessary supplies for your apartment</em></p>
+						<ul>
+							<li>Canister vacuum</li>
+							<li>Duster</li>
+							<li>Floor mop</li>
+							<li>Toilet brush</li>
+							<li>Bucket</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
