--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -93,7 +93,109 @@
 			<font>Enjoy your sparkling, clean home</font>
 		</li>
 	</ul>
-	<div id="wi"><a href="#" class="btn btn-contrast btn-large home-wi">WHAT'S INCLUDED?</a></div>
+	<div id="wi">
+		<a class="btn btn-contrast btn-large home-wi popdown" id='include'>WHAT'S INCLUDED?</a>
+			<div class="bpop" id="bpop-include">
+				<span class="b-close">x</span>
+				<div class="b-content">
+					<h4 class="space-border">What's Included in the Cleaning?</h4>
+					<table>
+						<tr>
+							<td>
+								<p class="big-font">Bedroom</p>
+								<ol>
+									<li>Beds made</li>
+									<li>Clothes folded</li>
+									<li>Furniture & surfaces wiped and dusted</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+							<td>
+								<img src="/static/img/in1.png">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/static/img/in2.png">
+							</td>
+							<td>
+								<p class="big-font">Bathroom</p>
+								<ol>
+									<li>Shower & bathtub rinsed and wiped</li>
+									<li>Countertops wiped</li>
+									<li>Toilets cleaned</li>
+									<li>Sinks, faucets, and fixtures wiped</li>
+									<li>Mirrors cleaned</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<p class="big-font">Kitchen</p>
+								<ol>
+									<li>Dishes washed</li>
+									<li>Cabinet exteriors wiped</li>
+									<li>Countertops and backsplash wiped</li>
+									<li>Sinks, faucets, and fixtures wiped</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+							<td>
+								<img src="/static/img/in3.png">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="/static/img/in4.png">
+							</td>
+							<td>
+								<p class="big-font">Other Areas</p>
+								<ol>
+									<li>Furniture & surfaces wiped and dusted</li>
+									<li>Items organized</li>
+									<li>Floors mopped</li>
+									<li>Window wiped (inside within reachable limit)</li>
+									<li>Trash emptied</li>
+								</ol>
+							</td>
+						</tr>
+					</table>
+					<center><h4>Special Requirements</h4>(upon request only)</center>
+					<ol>
+						<li>Refrigerator inside cleaned</li>
+						<li>Clothes hand washed</li>
+						<li>Clothes ironed</li>
+					</ol>
+					<h4 class="space-border"></h4>
+					<center><h4>Service NOT Included</h4></center>
+					<em>Due to insurance liability, safety constraints and other considerations we do not offer the following:</em>
+					<ul>
+						<li>Deep stain removal</li>
+						<li>Dusting and/or vacuuming of ceilings/windows/surfaces outside of normal reach</li>
+						<li>Cleaning outside the windows</li>
+						<li>Cleaning pet messes</li>
+						<li>Carpet cleaning</li>
+						<li>Steam cleaning</li>
+						<li>Extermination (insects, etc)</li>
+						<li>Cleaning of mold and biohazardous meterial</li>
+						<li>Landscaping</li>
+						<li>Yardwork</li>
+						<li>Garage</li>
+						<li>Patios</li>
+					</ul>
+				</div>
+			</div>
+	</div>
 </div>
 {% endblock content %}
 {% block extra_js %}
