--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -96,8 +96,8 @@
 	</footer>
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery.easing.1.3.js"></script>
 <script src="/static/js/bpopup.min.js"></script>
-<script src="/static/js/headroom.js"></script>
 <script src="/static/js/ms.js"></script>
 {% block extra_js %}{% endblock extra_js %}
 </body>
