--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Merry Cleaning Services | Luxury Ayi Cleaning Shanghai{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content='width=device-width, initial-scale=1' name='viewport'/>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/ms.css">
 	<link rel="shortcut icon" href="/static/img/favicon.png">
@@ -33,8 +32,7 @@
     				<img src="/static/img/site-logo.png" alt="merry logo" />
     			</a>
     		</div>
-    		<div class="collapse navbar-collapse">
-    			<ul class="nav navbar-nav navbar-right">
+    		<ul class="nav navbar-nav navbar-right">
     				
     				<li id="social">
     					<img class="h-t" src="/static/img/wx.png" data-toggle="tooltip" data-placement="bottom" />
@@ -57,17 +55,15 @@
 		        		</p>
     				</li>
     			</ul>
-    		</div>
+    		
     	</div>
     </header>
 {% block content %}
         <p>Use this document as a way to quick start any new project.</p>
 {% endblock content %}
 	<div style="clear:both;"></div>
-	<footer>
-		<section class="footer-line">
+	<div class="footer-line">
 		<div class="container f-center">
-				
 				<ul id="f-ul">
 					<li style="border:0;"><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
 					<li>
@@ -92,13 +88,13 @@
 				</ul>
 				<img src="/static/img/ft-pic.png" alt="" />
 			</div>
-		</section>
-	</footer>
+		</div>
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/jquery.easing.1.3.js"></script>
 <script src="/static/js/bpopup.min.js"></script>
 <script src="/static/js/ms.js"></script>
 {% block extra_js %}{% endblock extra_js %}
+{% block aditional_js %}{% endblock aditional_js %}
 </body>
 </html>
